better meili config

--- a/meili_config/indexes-clashes-settings.json
+++ b/meili_config/indexes-clashes-settings.json
@@ -1,6 +1,13 @@
 {
     "displayedAttributes": [
-        "*"
+        "title",
+        "lastVersion.data.statement",
+        "lastVersion.data.inputDescription",
+        "lastVersion.data.outputDescription",
+        "lastVersion.data.constraints",
+        "nickname",
+        "publicHandle",
+        "codingamerHandle"
     ],
     "searchableAttributes": [
         "title",
