--- a/Caddyfile
+++ b/Caddyfile
@@ -1,8 +1,8 @@
 codingame.tools {
-    root * /home/mikko/koodit/Web/cgsearch/frontend/dist
+    root * /srv
     file_server
 }
 
 meili.codingame.tools {
-    reverse_proxy :7700
+    reverse_proxy meili:7700
 }
