update meili config to return test cases

--- a/meili_config/indexes-clashes-settings.json
+++ b/meili_config/indexes-clashes-settings.json
@@ -5,6 +5,7 @@
         "lastVersion.data.inputDescription",
         "lastVersion.data.outputDescription",
         "lastVersion.data.constraints",
+        "lastVersion.data.testCases",
         "nickname",
         "publicHandle",
         "codingamerHandle"
