--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,12 @@ version: '3.8'
 
 services:
   meili:
-    image: getmeili/meilisearch:v0.29
+    image: getmeili/meilisearch:v1.0
     container_name: meili
     environment:
       - "MEILI_MASTER_KEY=$MEILI_MASTER_KEY"
       - "MEILI_ENV=$MEILI_ENV"
+      - "MEILI_NO_ANALYTICS=true"
     expose:
       - "7700"
     volumes:
